Update pom.xml (so that every computer can access)